data/diff_tests/wasmtime/block_IncorrectHandlingofControlFlowAcrossModuleBoundaries_158.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\00\01\7f\02\95\80\80\80\00\01\03\65\6e\76\0d\65"
    "\78\74\65\72\6e\61\6c\5f\66\75\6e\63\00\00\03\82"
    "\80\80\80\00\01\00\07\91\80\80\80\00\01\0d\69\6e"
    "\74\65\72\6e\61\6c\5f\66\75\6e\63\00\01\0a\a1\80"
    "\80\80\00\01\9b\80\80\80\00\01\01\7f\02\7f\03\40"
    "\10\00\21\00\20\00\41\00\46\0d\00\20\00\0c\01\0b"
    "\41\01\0b\0b"
  )
""
)